# simple-interpreter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FileReader.cpp  FileReader.h  HelperMethods.cpp  HelperMethods.h  Interpretation.cpp  Interpretation.h  MainWindow.cpp  MainWindow.h  README.md  SortVariables.h  codeeditor.cpp  highlighter.cpp  highlighter.h  main.cpp  mainwindow.ui
Collections/: BST.h  Heap.h  Stack.h
Evaluation/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  Operator.h  Value.cpp  Value.h
Parser/: Parser.cpp  Parser.h  StatementType.h  StatementValidator.cpp  StatementValidator.h
Statements/: AssignmentStatement.cpp  AssignmentStatement.h  GotoStatement.cpp  GotoStatement.h  IfStatement.cpp  IfStatement.h  Statement.cpp  Statement.h
Tests/: EvaluationTests.cpp  IfStatementTests.cpp  main.cpp
Utils/: Constants.h  HelperMethods.cpp  HelperMethods.h
